# keyboard-data-forge

./: .gitignore  LICENSE  README.md
.github/workflows/: build_mozc_dict.yml  build_resources.yml  build_wiki_ngram.yml  keep_alive_artifacts.yml  test_resources.yml
crates/mozc-dict-gen/: Cargo.toml
crates/mozc-dict-gen/src/: main.rs
crates/test-resources/: Cargo.toml
crates/test-resources/examples/: query_fst.rs  test_tokenize.rs
crates/test-resources/src/: lib.rs
crates/test-resources/tests/: mozc_dict_test.rs  ngram_fst_test.rs
crates/wiki-ngram/: Cargo.toml
crates/wiki-ngram/src/: download.rs  extract.rs  main.rs  ngram.rs  tokenize.rs
