[package]
name = "mozc-dict-gen"
version = "0.1.0"
edition = "2021"
default-run = "mozc-dict-gen"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
flate2 = "1.0"
tar = "0.4"
anyhow = "1.0"
csv = "1.3"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
vibrato = { git = "https://github.com/daac-tools/vibrato", branch = "main" }
zstd = "0.12"
