[package]
name = "wiki-ngram"
version = "0.1.0"
edition = "2021"

[dependencies]
vibrato = "0.5"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
quick-xml = "0.36"
bzip2 = "0.4"
fst = "0.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"
zstd = "0.13"
memmap2 = "0.9"

